[Bug] Fix up p alignment in small notice with an icon present.

--- a/scss/_notifications.scss
+++ b/scss/_notifications.scss
@@ -195,6 +195,7 @@
 
 				&:before {
 					font-size: 16px;
+					margin-right: 14px;
 				}
 			}
 		}
